# kardbrd-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RULES.md  SOUL.md  kardbrd.yml  kardbrd.yml.example  mkdocs.yml  pyproject.toml
.claude/commands/: ke.md  ki.md  kp.md  kr.md
.github/workflows/: docs.yml
docs/: changelog.md  index.md
docs/api/: index.md
docs/architecture/: executors.md  index.md  merge-workflow.md  rule-engine.md  worktrees.md
docs/configuration/: bot-commands.md  cli.md  env-vars.md  rules.md  schedules.md
docs/contributing/: conventions.md  development.md  testing.md
docs/deployment/: docker.md  index.md  linux.md  macos.md  smolvm.md  uv.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
examples/docker/: .env.example  README.md  docker-compose.watchtower.yml  docker-compose.yml
examples/linux/: README.md  kardbrd-agent-shell.sh  kardbrd-agent-update.sh  provision.sh
examples/macos/: README.md  com.kardbrd.manager.plist  install.sh  kardbrd-manager-run.sh  uninstall.sh
examples/smolvm/: README.md  Smolfile
examples/uv/: README.md
kardbrd_agent/: __init__.py  __main__.py  cli.py  codex_executor.py  executor.py  goose_executor.py  manager.py  mcp_proxy.py  merge_tools.py  merge_workflow.py  rules.py  scheduler.py  wizard.py  worktree.py
kardbrd_agent/tests/: __init__.py  conftest.py  test_bot_commands.py  test_codex_executor.py  test_executor.py  test_executor_stdio.py  test_goose_executor.py  test_integration.py  test_rules.py  (+11 more)
(+22 files in other folders)
